--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+#This is where the generated site will be placed once Jekyll is done transforming it.
+_site/
