add blog 2012-07-06-android-get-phone-number

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ gen/
 local.properties
 
 #This is where the generated site will be placed once Jekyll is done transforming it.
-blog/_site
-blog/_cache
+blog/_site/
+blog/_cache/
+
+
 
