--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ gen/
 local.properties
 
 #This is where the generated site will be placed once Jekyll is done transforming it.
+_site/
+_cache/
 blog/_site/
 blog/_cache/
 
