--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,20 @@ author :
   github : xianminx
   twitter : xianminx
 
+
+safe: true
+lsi: false
+source:      .
 destination: ./_site
+plugins:     ./_plugins
+
+
 auto:        false
-lsi:         false
 server_port: 4000
 pygments:    true
-#markdown:    maruku
-markdown: redcarpet2
+markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
-#permalink:   date
 permalink:   pretty
 paginate:    5
 maruku:
