add site.url variable in config

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ author :
   github : xianminx
   twitter : xianminx
 
+
+site:
+  url: http://xianminx.github.io/
+
 safe: true
 lsi: false
 source:      .
