--- a/package.json
+++ b/package.json
@@ -15,22 +15,24 @@
     "@headlessui/react": "2.2.0",
     "@next/bundle-analyzer": "15.1.4",
     "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.13",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "contentlayer2": "0.5.3",
+    "contentlayer2": "0.5.4",
     "esbuild": "0.20.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "motion": "^12.4.7",
     "next": "15.1.4",
     "next-contentlayer2": "0.5.3",
     "next-themes": "^0.3.0",
-    "pliny": "0.4.0",
-    "postcss": "^8.4.24",
-    "react": "rc",
-    "react-dom": "rc",
+    "pliny": "^0.4.1",
+    "rc-slider": "^11.1.8",
+    "react": "^19",
+    "react-dom": "^19",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
@@ -62,6 +64,7 @@
     "globals": "^15.12.0",
     "husky": "^9.0.0",
     "lint-staged": "^13.0.0",
+    "postcss": "8.4.49",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.1.3"
