feat: add support for Mermaid diagrams in MDX

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "mermaid": "^11.4.1",
     "motion": "^12.4.7",
     "next": "15.1.4",
     "next-contentlayer2": "0.5.4",
