--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "next-contentlayer2": "0.5.4",
     "next-themes": "^0.3.0",
     "pliny": "^0.4.1",
+    "prism-react-renderer": "^2.4.1",
     "rc-slider": "^11.1.8",
     "react": "^19",
+    "react-code-block": "^1.1.3",
     "react-dom": "^19",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
