--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19",
     "react-code-block": "^1.1.3",
     "react-dom": "^19",
+    "react-tweet": "^3.2.2",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
