feat: add Codespaces prebuild configuration
- Add prebuild.yml to enable automatic prebuilds on main/master branches
- Update devcontainer.json with optimized build commands and GitHub CLI
- Add .dockerignore to exclude unnecessary files from container builds
- Add dependabot.yml to keep dependencies and devcontainer up to date
- Configure prebuild to install dependencies and build project for faster startup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,10 @@
     "memory": "8gb"
   },
   "waitFor": "onCreateCommand",
-  "updateContentCommand": "yarn",
-  "postCreateCommand": "",
-  "postAttachCommand": "yarn dev",
+  "updateContentCommand": "yarn install --frozen-lockfile",
+  "postCreateCommand": "yarn build",
+  "postAttachCommand": "",
+  "onCreateCommand": "yarn install --frozen-lockfile && yarn build",
   "customizations": {
     "codespaces": {
       "openFiles": ["data/blog/code-sample.mdx"]
@@ -24,5 +25,8 @@
       "onAutoForward": "openPreview"
     }
   },
-  "forwardPorts": [3000]
+  "forwardPorts": [3000],
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  }
 }
